# nautilus-gnome-split

./: .bzrignore  AUTHORS  ChangeLog  Makefile.in  NEWS  README  aclocal.m4  config.sub  configure  configure.ac  ltmain.sh
data/: Makefile.am  Makefile.in
po/: LINGUAS  Makevars  POTFILES.in  fr.po  nautilus-gnome-split.pot
src/: Makefile.am  Makefile.in  gnome-split.c  nautilus-gnome-split.c  nautilus-gnome-split.h
